--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,8 @@
 @tailwind utilities;
 body {
   font-family: "Open Sans", serif;
-  background-color: #181a1b;
-  color: #fff;
+  /* background-color: #181a1b; */
+  color: black;
 }
 
 @layer base {
